force-app/main/default/objects/DocumentType__c/DocumentType__c.object-meta.xml
<CustomObject>
    <label>Document Type</label>
    <nameField>
        <displayFormat>DT-{0000000}</displayFormat>
        <label>Document Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>