force-app/main/default/objects/DocumentType__c/fields/Brand_Required__c.field-meta.xml
<CustomField>
    <fullName>Brand_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand List Required</label>
    <type>Checkbox</type>
</CustomField>