force-app/main/default/objects/DocumentType__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Feed Outbound - DateFormat.</description>
    <formula>IF ( DATEVALUE(CreatedDate) &gt;=
DATE ( YEAR (DATEVALUE(CreatedDate)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,4),4) ,
0,4,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,4),4))
)
&amp;&amp;
DATEVALUE(CreatedDate) &lt;
DATE ( YEAR (DATEVALUE(CreatedDate)),11,1)
+
(
4-
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,4),4) ,
0,4,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,4),4))
),
MID( TEXT(CreatedDate- 4/24) , 6, 2)+&quot;/&quot;+MID( TEXT(CreatedDate- 4/24) , 9, 2)+&quot;/&quot;+MID( TEXT(CreatedDate- 4/24) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate- 4/24), 11, 9)
,
MID( TEXT(CreatedDate- 5/24) , 6, 2)+&quot;/&quot;+MID( TEXT(CreatedDate- 5/24) , 9, 2)+&quot;/&quot;+MID( TEXT(CreatedDate- 5/24) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate- 5/24), 11, 9)
)</formula>
    <label>CreatedDate</label>
    <type>Text</type>
</CustomField>