force-app/main/default/objects/DocumentType__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <description>Feed Outbound - Document Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>