force-app/main/default/objects/DocumentType__c/fields/DocumentTypeCode__c.field-meta.xml
<CustomField>
    <fullName>DocumentTypeCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocumentTypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>