force-app/main/default/objects/DocumentType__c/fields/isReimbursement__c.field-meta.xml
<CustomField>
    <fullName>isReimbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReimbursement</label>
    <type>Checkbox</type>
</CustomField>