force-app/main/default/objects/DocumentType__c/fields/isTrade__c.field-meta.xml
<CustomField>
    <fullName>isTrade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTrade</label>
    <type>Checkbox</type>
</CustomField>