force-app/main/default/objects/DocumentType__c/fields/LetterText__c.field-meta.xml
<CustomField>
    <fullName>LetterText__c</fullName>
    <description>HardCode Empty value.</description>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter Text</label>
    <type>Text</type>
</CustomField>