force-app/main/default/objects/DocumentType__c/fields/Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company__c</fullName>
    <formula>Text(Op_Company__r.OperatingCompany__c)</formula>
    <label>Operating Company</label>
    <type>Text</type>
</CustomField>