force-app/main/default/objects/DocumentType__c/fields/PkgCode__c.field-meta.xml
<CustomField>
    <fullName>PkgCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Package Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>