force-app/main/default/objects/DocumentType__c/fields/PrintLetterHead__c.field-meta.xml
<CustomField>
    <fullName>PrintLetterHead__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PrintLetterHead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>