force-app/main/default/objects/DocumentType__c/fields/ReqFulfillment__c.field-meta.xml
<CustomField>
    <fullName>ReqFulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Fulfillment</label>
    <type>Checkbox</type>
</CustomField>