force-app/main/default/objects/DocumentType__c/fields/showMasterField__c.field-meta.xml
<CustomField>
    <fullName>showMasterField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mater ID Required</label>
    <type>Checkbox</type>
</CustomField>