force-app/main/default/objects/DocumentType__c/fields/VendorCode__c.field-meta.xml
<CustomField>
    <fullName>VendorCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>